--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "lintfix": "npm run lint:js -- --fix"
+    "lintfix": "npm run lint:js -- --fix",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
@@ -29,6 +30,7 @@
     "@nuxtjs/vuetify": "^1.12.3",
     "eslint": "^8.24.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-vue": "^9.5.1"
+    "eslint-plugin-vue": "^9.5.1",
+    "gh-pages": "^6.2.0"
   }
 }
